@@ -51,3 +51,8 @@ QUEUED_N_OF_M = 633
 RESUMING_AT = 750
 SKIPPING_COMMERCIAL = 751
 FORWARDING_THROUGH = 752
+
+DATE = 850
+TITLE = 851
+ORIG_AIR_DATE = 852
+CHANNEL = 613
