@@ -1,4 +1,4 @@
-07/30/2010 - MythBox RC2
+XX/XX/2010 - MythBox RC2
 =============================
  - new     : Issue 97 - Myth TV hostname and port are now queried directly from the database. Changed to read-only on the Settings->MythTV screen
  - fixed   : Issue 98 - IP addresses are used throughout the codebase. No more host not found errors.
@@ -13,7 +13,8 @@
  - new     : Runs under the forthcoming version of XBMC - Dharma
  - new     : Cache ffmpeg output used for framerate extraction (comm flagging)
  - new     : Added 'Enable Aggressive Caching' to Settings->MythTV to pre-cache framerate and commercial break info
-  
+ - new     : Sort Upcoming Recordings by date, title, or channel
+ 
 06/08/2010 - MythBox RC1
 =============================
  - new     : MythTV 0.23 support added - Protocol version 56 
